--- a/TinyUI/Picker/UINumberPicker.xib
+++ b/TinyUI/Picker/UINumberPicker.xib
@@ -5,39 +5,31 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UINumberPickerView" customModule="TinyStore" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="40" height="80"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UINumberPicker" customModule="TinyUI" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="36" height="76"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8rF-59-Sai">
-                    <rect key="frame" x="0.0" y="0.0" width="40" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="GRc-uX-pYs"/>
-                    </constraints>
+                    <rect key="frame" x="0.0" y="0.0" width="36" height="25.5"/>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="46D-fl-2dF">
-                    <rect key="frame" x="0.0" y="0.0" width="40" height="25"/>
+                    <rect key="frame" x="0.0" y="0.0" width="36" height="25.5"/>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rYA-MX-YZk">
-                    <rect key="frame" x="0.0" y="55" width="40" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="nLV-r4-nrH"/>
-                    </constraints>
+                    <rect key="frame" x="0.0" y="50.5" width="36" height="25.5"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L7D-1V-Noy">
-                    <rect key="frame" x="0.0" y="55" width="40" height="25"/>
-                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D55-dW-RXN">
-                    <rect key="frame" x="0.0" y="25" width="40" height="30"/>
+                    <rect key="frame" x="0.0" y="25.5" width="36" height="25"/>
                     <subviews>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="99" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lma-Jh-j9u">
-                            <rect key="frame" x="0.0" y="0.0" width="40" height="30"/>
+                            <rect key="frame" x="0.0" y="0.0" width="36" height="25"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -51,6 +43,9 @@
                         <constraint firstAttribute="trailing" secondItem="Lma-Jh-j9u" secondAttribute="trailing" id="ZP6-BW-F9W"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L7D-1V-Noy">
+                    <rect key="frame" x="0.0" y="50.5" width="36" height="25.5"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -60,6 +55,7 @@
                 <constraint firstItem="L7D-1V-Noy" firstAttribute="top" secondItem="rYA-MX-YZk" secondAttribute="top" id="Gdo-q0-4Gt"/>
                 <constraint firstItem="L7D-1V-Noy" firstAttribute="bottom" secondItem="rYA-MX-YZk" secondAttribute="bottom" id="Ggl-jY-aFL"/>
                 <constraint firstItem="46D-fl-2dF" firstAttribute="leading" secondItem="8rF-59-Sai" secondAttribute="leading" id="LX2-Xi-bLq"/>
+                <constraint firstItem="8rF-59-Sai" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="1:3" id="O69-CH-bjl"/>
                 <constraint firstAttribute="trailing" secondItem="8rF-59-Sai" secondAttribute="trailing" id="P2L-hz-JUG"/>
                 <constraint firstItem="46D-fl-2dF" firstAttribute="top" secondItem="8rF-59-Sai" secondAttribute="top" id="PAN-rf-Ddq"/>
                 <constraint firstItem="8rF-59-Sai" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="VxC-1L-7Qf"/>
@@ -67,6 +63,7 @@
                 <constraint firstAttribute="trailing" secondItem="D55-dW-RXN" secondAttribute="trailing" id="dyR-d6-Unu"/>
                 <constraint firstItem="rYA-MX-YZk" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="fCm-jw-qD9"/>
                 <constraint firstItem="D55-dW-RXN" firstAttribute="top" secondItem="8rF-59-Sai" secondAttribute="bottom" id="lbn-kb-RCd"/>
+                <constraint firstItem="rYA-MX-YZk" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="1:3" id="pAF-8F-vkB"/>
                 <constraint firstItem="8rF-59-Sai" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ubl-N1-5dg"/>
                 <constraint firstItem="46D-fl-2dF" firstAttribute="trailing" secondItem="8rF-59-Sai" secondAttribute="trailing" id="ucz-5Z-diT"/>
                 <constraint firstItem="L7D-1V-Noy" firstAttribute="trailing" secondItem="rYA-MX-YZk" secondAttribute="trailing" id="vsx-ei-2Ua"/>
