set option chain

--- a/TinyStore/Cart/UICartItemView.xib
+++ b/TinyStore/Cart/UICartItemView.xib
@@ -66,33 +66,6 @@
                         <constraint firstAttribute="width" constant="36" id="dIr-o9-ATo"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCv-ts-L6k">
-                    <rect key="frame" x="46" y="70" width="50" height="24"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Malesuada" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMG-Sd-8Dx">
-                            <rect key="frame" x="0.0" y="6.5" width="50" height="12"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OBL-tX-UCQ">
-                            <rect key="frame" x="0.0" y="0.0" width="50" height="24"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstItem="hMG-Sd-8Dx" firstAttribute="centerY" secondItem="zCv-ts-L6k" secondAttribute="centerY" id="Cvw-ds-Iy9"/>
-                        <constraint firstAttribute="trailing" secondItem="OBL-tX-UCQ" secondAttribute="trailing" id="F3T-bI-IsO"/>
-                        <constraint firstItem="OBL-tX-UCQ" firstAttribute="top" secondItem="zCv-ts-L6k" secondAttribute="top" id="GRU-fH-7AD"/>
-                        <constraint firstAttribute="trailing" secondItem="hMG-Sd-8Dx" secondAttribute="trailing" id="MjQ-Ig-a6D"/>
-                        <constraint firstItem="hMG-Sd-8Dx" firstAttribute="leading" secondItem="zCv-ts-L6k" secondAttribute="leading" id="P8g-Pr-16S"/>
-                        <constraint firstAttribute="bottom" secondItem="OBL-tX-UCQ" secondAttribute="bottom" id="j7z-S3-axi"/>
-                        <constraint firstAttribute="height" constant="24" id="pAQ-d9-KhO"/>
-                        <constraint firstAttribute="width" constant="50" id="xHK-Xr-kd6"/>
-                        <constraint firstItem="OBL-tX-UCQ" firstAttribute="leading" secondItem="zCv-ts-L6k" secondAttribute="leading" id="yUI-e6-7mn"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J7r-H6-Gzj">
                     <rect key="frame" x="46" y="99.5" width="329" height="0.5"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -100,31 +73,11 @@
                         <constraint firstAttribute="height" constant="0.5" id="SNL-4H-K0L"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ml3-Wt-qzy">
-                    <rect key="frame" x="104" y="70" width="50" height="24"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sollicitudin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zhp-JE-TUd">
-                            <rect key="frame" x="0.0" y="6.5" width="50" height="12"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jpp-lT-sKa">
-                            <rect key="frame" x="0.0" y="0.0" width="50" height="24"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                        </button>
-                    </subviews>
-                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zCv-ts-L6k">
+                    <rect key="frame" x="46" y="70" width="100" height="24"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="24" id="4aC-q2-QRc"/>
-                        <constraint firstItem="jpp-lT-sKa" firstAttribute="top" secondItem="Ml3-Wt-qzy" secondAttribute="top" id="7st-7U-3pN"/>
-                        <constraint firstAttribute="trailing" secondItem="jpp-lT-sKa" secondAttribute="trailing" id="HIa-LW-M3v"/>
-                        <constraint firstItem="jpp-lT-sKa" firstAttribute="leading" secondItem="Ml3-Wt-qzy" secondAttribute="leading" id="NLU-v6-jiB"/>
-                        <constraint firstAttribute="trailing" secondItem="Zhp-JE-TUd" secondAttribute="trailing" id="UKv-F1-CzR"/>
-                        <constraint firstAttribute="bottom" secondItem="jpp-lT-sKa" secondAttribute="bottom" id="YPn-ik-gNZ"/>
-                        <constraint firstItem="Zhp-JE-TUd" firstAttribute="leading" secondItem="Ml3-Wt-qzy" secondAttribute="leading" id="iJD-SB-E7Y"/>
-                        <constraint firstAttribute="width" constant="50" id="qay-Tx-Xjs"/>
-                        <constraint firstItem="Zhp-JE-TUd" firstAttribute="centerY" secondItem="Ml3-Wt-qzy" secondAttribute="centerY" id="tUz-Sx-EaM"/>
+                        <constraint firstAttribute="height" constant="24" id="pAQ-d9-KhO"/>
                     </constraints>
                 </view>
             </subviews>
@@ -136,11 +89,10 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="SWx-Xz-kce" secondAttribute="trailing" constant="16" id="5u1-KO-2fQ"/>
                 <constraint firstItem="J7r-H6-Gzj" firstAttribute="leading" secondItem="iJI-2b-6JV" secondAttribute="leading" id="8sU-ZZ-sWg"/>
                 <constraint firstItem="J7r-H6-Gzj" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="BJk-Ts-Jgq"/>
+                <constraint firstItem="SWx-Xz-kce" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="zCv-ts-L6k" secondAttribute="trailing" constant="12" id="MAZ-A5-TOI"/>
                 <constraint firstItem="J7r-H6-Gzj" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="bPj-tU-6DH"/>
-                <constraint firstItem="Ml3-Wt-qzy" firstAttribute="leading" secondItem="zCv-ts-L6k" secondAttribute="trailing" constant="8" id="dsj-gT-3Km"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="zCv-ts-L6k" secondAttribute="bottom" constant="6" id="fT4-4o-Vg8"/>
                 <constraint firstItem="nNx-fH-OwE" firstAttribute="centerY" secondItem="iJI-2b-6JV" secondAttribute="centerY" id="fwu-HP-a64"/>
-                <constraint firstItem="Ml3-Wt-qzy" firstAttribute="bottom" secondItem="zCv-ts-L6k" secondAttribute="bottom" id="gAd-mI-4ei"/>
                 <constraint firstItem="iJI-2b-6JV" firstAttribute="leading" secondItem="nNx-fH-OwE" secondAttribute="trailing" constant="12" id="hh4-hv-VhA"/>
                 <constraint firstItem="nNx-fH-OwE" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="12" id="jTG-di-Crp"/>
                 <constraint firstItem="zCv-ts-L6k" firstAttribute="leading" secondItem="iJI-2b-6JV" secondAttribute="leading" id="n7n-Kz-Lko"/>
@@ -150,17 +102,12 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="contentContainerView" destination="iJI-2b-6JV" id="sPP-ZX-LTC"/>
-                <outlet property="firstButton" destination="OBL-tX-UCQ" id="7qm-U3-2Nk"/>
-                <outlet property="firstContainerView" destination="zCv-ts-L6k" id="cxN-EC-ow9"/>
-                <outlet property="firstTitleLabel" destination="hMG-Sd-8Dx" id="lwC-N4-GcU"/>
+                <outlet property="optionChainContainerView" destination="zCv-ts-L6k" id="0LB-nE-rAK"/>
                 <outlet property="previewImageView" destination="VfZ-Vv-Gl1" id="2nd-Tt-eU4"/>
                 <outlet property="priceLabel" destination="pud-01-kLN" id="2Sb-Lx-lfK"/>
                 <outlet property="quantityPickerContainerView" destination="SWx-Xz-kce" id="eNR-aW-BWA"/>
-                <outlet property="secondButton" destination="jpp-lT-sKa" id="UIH-Lk-AN9"/>
-                <outlet property="secondContainerView" destination="Ml3-Wt-qzy" id="ZGD-vm-J4e"/>
-                <outlet property="secondTitleLabel" destination="Zhp-JE-TUd" id="9b3-Md-Yrg"/>
                 <outlet property="selectionContainerView" destination="nNx-fH-OwE" id="INP-sS-q9K"/>
-                <outlet property="separatorView" destination="J7r-H6-Gzj" id="8Yg-dy-AmX"/>
+                <outlet property="separatorView" destination="J7r-H6-Gzj" id="cco-aV-oRU"/>
                 <outlet property="titleLabel" destination="HOx-UJ-tXq" id="pdS-Av-ipu"/>
             </connections>
             <point key="canvasLocation" x="33.5" y="-229"/>
